--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-confluent-kafka==2.3.0
+confluent-kafka==2.5.3
 py4j==0.10.9.7
-pyspark==3.5.0
-simplejson==3.19.2
+pyspark==3.5.2
+PyYAML==6.0.2
+simplejson==3.19.3
+python-dotenv==1.0.1
